--- a/html/template.ejs
+++ b/html/template.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-amber.min.css" />
+<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue-orange.min.css" />
 <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 </head>
 <body>
