--- a/html/template.ejs
+++ b/html/template.ejs
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue-orange.min.css" />
 <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+<title>Eagle: <%=chapter%> (<%=index[si].sec%>)</title>
 </head>
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
