Flesh out basics chapter

--- a/html/template.ejs
+++ b/html/template.ejs
@@ -158,7 +158,8 @@
 
 pre {
     border-left: 1px solid #e4e4e4;
-    padding-left: 30px;
+    padding-left: 20px;
+    margin-left: 15px;
 }
 </style>
 </html>
